--- a/vggnet.ipynb
+++ b/vggnet.ipynb
@@ -9,7 +9,7 @@
     "Name: Rohan vishwanath chatse \n",
     "Email: rohancrchatse@gmail.com \n",
     "Course: Full stack data science pro \n",
-    "Git link: "
+    "Git link: https://github.com/Chatserohan/DeepLearningAssignment/blob/main/vggnet.ipynb "
    ]
   },
   {
